--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ffmpeg/util": "^0.12.1",
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-compare-slider": "^3.1.0",
